--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
       "react-dom": "^18.2.0",
       "react-scripts": "5.0.1",
       "web-vitals": "^2.1.4",
-      "sass": "^1.62.1"
+      "sass": "^1.62.1",
+      "react-router-dom": "^6.11.1",
+      "react-icons": "^4.8.0"
    },
    "scripts": {
       "start": "react-scripts start",
